[BankingAPI]     - Converting int32 to uint32     - Recognized: need to re-structure function dependencies     - AccountAdapters implemented
