# docs/swagger.yaml
@@ -65,7 +65,7 @@ paths:
                 properties:
                   UserID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   Name:
                     type: string
@@ -96,7 +96,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: user returned succesfully
@@ -111,7 +111,7 @@ paths:
                 properties:
                   Id:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   Name:
                     type: string
@@ -150,7 +150,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "200":
           description: User deleted successfully
@@ -163,7 +163,7 @@ paths:
                 properties:
                   Id:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
         "400":
           description: User not found
@@ -192,7 +192,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: Name
           description: name of the user
@@ -229,7 +229,7 @@ paths:
                 properties:
                   UserID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   Name:
                     type: string
@@ -265,16 +265,23 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: ClientID
           description: client ID to be vinculated
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
-          name: AccountPassword
+          name: AgencyID
+          description: ID of the cliets agency of the account
+          required: true
+          schema:
+            type: integer
+            format: uint32
+        - in: query
+          name: Password
           description: password for the account to be created
           required: true
           schema:
@@ -288,32 +295,37 @@ paths:
               schema:
                 type: object
                 required:
+                  - AccountID
                   - UserID
                   - ClientID
-                  - AccountID
                   - AgencyID
-                  - AccountStatus
+                  - Status
+                  - Balance
                 properties:
+                  AccountID:
+                    type: integer
+                    format: uint32
+                    example: 98751
                   UserID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   ClientID:
                     type: integer
-                    format: int32
-                    example: 12741
-                  AccountID:
-                    type: integer
-                    format: int32
-                    example: 98751
+                    format: uint32
+                    example: 1274
                   AgencyID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 17194
                   AccountStatus:
                     type: boolean
                     format: boolean
                     example: true
+                  Balance:
+                    type: number
+                    format: float64
+                    example: 1282.34
         "400":
           description: An error ocurred during creation, Account not created
           content:
@@ -342,7 +354,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "200":
           description: Account details that are returned
@@ -359,19 +371,19 @@ paths:
                 properties:
                   UserID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   ClientID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 12741
                   AccountID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 98751
                   AgencyID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 17194
                   Balance:
                     type: number
@@ -404,28 +416,28 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: UserID
           description: ID of user vinculated with account
           required: false
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: ClientID
           description: ID of client vinculated with account
           required: false
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: AgencyID
           description: ID of agency vinculated with account
           required: false
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: AccountPassword
           description: password for the account to be updated
@@ -449,19 +461,19 @@ paths:
                 properties:
                   UserID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   ClientID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 12741
                   AccountID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 98751
                   AgencyID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 17194
         "400":
           description: Account not found
@@ -489,7 +501,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "200":
           description: Account deleted succesfully
@@ -498,12 +510,12 @@ paths:
               schema:
                 type: object
                 required:
-                  - Message
+                  - AccountID
                 properties:
-                  Message:
-                    type: string
-                    format: uuid
-                    example: "Account deleted"
+                  AccountID:
+                    type: integer
+                    format: uint32
+                    example: 1234
         "400":
           description: Account not found
           content:
@@ -552,7 +564,7 @@ paths:
                 properties:
                   listOfAccounts:
                     type: array
-                    format: Account
+                    format: array
                     example:
                       {
                         {
@@ -586,7 +598,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: Name
           description: name of the client
@@ -620,7 +632,7 @@ paths:
                 properties:
                   ClientID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   Name:
                     type: string
@@ -662,7 +674,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "200":
           description: client returned sucessfully
@@ -678,11 +690,11 @@ paths:
                 properties:
                   ClientID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   UserID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 12741
                   Name:
                     type: string
@@ -725,7 +737,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       operationId: deleteClient
       responses:
         "200":
@@ -739,7 +751,7 @@ paths:
                 properties:
                   ClientID:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 12345
         "400":
           description: Client not found
@@ -768,7 +780,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: Name
           description: name of the client to be updated
@@ -806,7 +818,7 @@ paths:
                 properties:
                   Id:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   Name:
                     type: string
@@ -847,7 +859,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: BalanceUpdate
           description: The value to be updated in the account (negative means withdrawl, positive means deposit)
@@ -863,8 +875,13 @@ paths:
               schema:
                 type: object
                 required:
+                  - AccountID
                   - Balance
                 properties:
+                  AccountID:
+                    type: integer
+                    format: uint32
+                    example: 1234
                   Balance:
                     type: number
                     format: float64
@@ -897,7 +914,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: BalanceUpdate
           description: The value to be updated in the account
@@ -920,8 +937,13 @@ paths:
               schema:
                 type: object
                 required:
+                  - AccountID
                   - Balance
                 properties:
+                  AccountID:
+                    type: integer
+                    format: uuint32
+                    example: 14132
                   Balance:
                     type: number
                     format: float64
@@ -954,14 +976,14 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: AccountIDTo
           description: ID of the account to be updated
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: TransferValue
           description: The value to be transferred between accounts (negative means withdrawl, positive means deposit)
@@ -1036,7 +1058,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: Account blocked sucessfully
@@ -1079,7 +1101,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
         - in: query
           name: AutomaticDebitValue
           description: The value to be registered in the account 
@@ -1150,7 +1172,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: Client updated sucessfully
@@ -1167,7 +1189,7 @@ paths:
                 properties:
                   Id:
                     type: integer
-                    format: int32
+                    format: uint32
                     example: 20128
                   Name:
                     type: string
@@ -1208,7 +1230,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: User blocked sucessfully
@@ -1251,7 +1273,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: User unblocked sucessfully
@@ -1294,7 +1316,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: Client unblocked sucessfully
@@ -1337,7 +1359,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
+            format: uint32
       responses:
         "202":
           description: Account unblocked sucessfully
